[gd_scene load_steps=3 format=2]

[ext_resource path="res://themes/dark.tres" type="Theme" id=1]
[ext_resource path="res://ui/scripts/JoinMenu.gd" type="Script" id=2]

[node name="Join" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rect_pivot_offset = Vector2( -512, -192 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -119.5
margin_right = 250.0
margin_bottom = 119.5
rect_min_size = Vector2( 500, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inputs" type="VBoxContainer" parent="PanelContainer"]
margin_left = 14.0
margin_top = 14.0
margin_right = 486.0
margin_bottom = 225.0
theme = ExtResource( 1 )
custom_constants/separation = 20
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Inputs"]
margin_right = 472.0
margin_bottom = 154.0

[node name="IPAddressInput" type="HBoxContainer" parent="PanelContainer/Inputs/VBoxContainer"]
margin_right = 472.0
margin_bottom = 73.0
rect_min_size = Vector2( 0, 70 )

[node name="Label" type="Label" parent="PanelContainer/Inputs/VBoxContainer/IPAddressInput"]
margin_top = 24.0
margin_right = 53.0
margin_bottom = 49.0
theme = ExtResource( 1 )
text = "IP:    "
valign = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/Inputs/VBoxContainer/IPAddressInput"]
margin_left = 61.0
margin_right = 472.0
margin_bottom = 73.0
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="PanelContainer/Inputs/VBoxContainer/IPAddressInput/PanelContainer"]
margin_left = 14.0
margin_top = 14.0
margin_right = 397.0
margin_bottom = 59.0
caret_blink = true

[node name="PortInput" type="HBoxContainer" parent="PanelContainer/Inputs/VBoxContainer"]
margin_top = 81.0
margin_right = 472.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 70 )

[node name="Label" type="Label" parent="PanelContainer/Inputs/VBoxContainer/PortInput"]
margin_top = 24.0
margin_right = 52.0
margin_bottom = 49.0
theme = ExtResource( 1 )
text = "Port:"
valign = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/Inputs/VBoxContainer/PortInput"]
margin_left = 60.0
margin_right = 472.0
margin_bottom = 73.0
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="PanelContainer/Inputs/VBoxContainer/PortInput/PanelContainer"]
margin_left = 14.0
margin_top = 14.0
margin_right = 398.0
margin_bottom = 59.0
text = "27015"
caret_blink = true

[node name="Buttons" type="HBoxContainer" parent="PanelContainer/Inputs"]
margin_top = 174.0
margin_right = 472.0
margin_bottom = 211.0

[node name="BackButton" type="Button" parent="PanelContainer/Inputs/Buttons"]
margin_right = 232.0
margin_bottom = 37.0
size_flags_horizontal = 3
text = "Back"

[node name="JoinButton" type="Button" parent="PanelContainer/Inputs/Buttons"]
margin_left = 240.0
margin_right = 472.0
margin_bottom = 37.0
size_flags_horizontal = 3
text = "Join Server"

[connection signal="pressed" from="PanelContainer/Inputs/Buttons/BackButton" to="PanelContainer/Inputs" method="_on_BackButton_pressed"]
[connection signal="pressed" from="PanelContainer/Inputs/Buttons/JoinButton" to="PanelContainer/Inputs" method="_on_JoinButton_pressed"]
